<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginActivity"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.9"
        android:orientation="vertical"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.1"
        android:orientation="vertical"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.2"
        android:orientation="horizontal"/>

    <TextView
        android:id="@+id/textHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="MA"
        android:fontFamily="@font/inter_light"
        android:textSize="42sp"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/guidelineTop"
        app:layout_constraintTop_toTopOf="@id/textHeaderSecond"
        app:layout_constraintBottom_toBottomOf="@id/textHeaderSecond"
        android:textColor="@color/blue900"
        />
    <TextView
        android:id="@+id/textHeaderSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SUK"
        android:fontFamily="@font/inter_bold"
        android:textSize="42sp"
        app:layout_constraintStart_toEndOf="@id/textHeader"
        app:layout_constraintTop_toBottomOf="@id/guidelineTop"
        android:textColor="@color/blue900"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextName"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:hint="@string/username"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@id/textHeaderSecond"
        style="@style/CustomTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputTextUsername"
            style="@style/CustomTextInputEditText"
            android:fontFamily="@font/inter"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextPassword"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:hint="@string/password"
        android:layout_marginTop="15dp"
        app:passwordToggleEnabled="true"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@id/outlinedTextName"
        style="@style/CustomTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/CustomTextInputEditText"
            android:id="@+id/inputTextPassword"
            android:fontFamily="@font/inter"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/layoutButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/primary"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/outlinedTextPassword"
        android:layout_marginTop="20dp"
        >
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonKirim"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/inter_medium"
            android:background="@color/primary"
            android:textColor="@color/white"
            android:text="@string/kirim"
            android:textSize="18sp"
        />
    </androidx.cardview.widget.CardView>


     <TextView
        android:id="@+id/textNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="⚠️ Pastikan Tersambung Koneksi Internet"
        android:fontFamily="@font/inter_light"
        android:textSize="12sp"
         android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
         app:layout_constraintEnd_toStartOf="@id/guidelineRight"
         app:layout_constraintTop_toBottomOf="@id/layoutButton"
        android:textColor="@color/blue900"
        />


</androidx.constraintlayout.widget.ConstraintLayout>