<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="5dp"
    android:id="@+id/cardReportLaundry"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardBackground"
        android:layout_width="match_parent"
        android:layout_height="470dp"
        app:cardBackgroundColor="@color/greenDark"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardForeground"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="@id/cardBackground"
        app:layout_constraintEnd_toEndOf="@id/cardBackground"
        app:layout_constraintBottom_toBottomOf="@id/cardBackground"
        />

    <TextView
        android:id="@+id/idTransactionLaundry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="CAB001234"
        android:fontFamily="@font/inter_medium"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toTopOf="@id/cardForeground"
        app:layout_constraintStart_toStartOf="@id/cardBackground"
        app:layout_constraintTop_toTopOf="@id/cardBackground"
        android:translationZ="2dp"
        />

    <ImageView
        android:id="@+id/buttonDetail"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/detail"
        android:translationZ="2dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@id/cardForeground"
        app:layout_constraintTop_toTopOf="@id/cardBackground"
        app:layout_constraintEnd_toEndOf="@id/cardBackground"
        app:tint="@color/white" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/cardForeground"
        app:layout_constraintEnd_toEndOf="@id/cardForeground"
        app:layout_constraintTop_toTopOf="@id/cardForeground"
        >

        <TableRow>

            <TextView
                android:text="PELANGGAN"
                android:padding="10dp"
                android:textSize="12sp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/inter"
                android:textColor="@color/blue900"
                android:textAlignment="textStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                /> <!-- kasih lebar minimum -->

             <TextView
                 android:id="@+id/inputCustommer"
                tools:text="NamaKu"
                android:padding="10dp"
                 android:textSize="14sp"
                 android:layout_marginEnd="10dp"
                android:fontFamily="@font/inter_semibold"
                android:textColor="@color/blue900"
                 android:textAlignment="textEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                /> <!-- kasih lebar minimum -->
        </TableRow>
        <TableRow>
            <TextView
                android:text="KARYAWAN"
                android:padding="10dp"
                android:textSize="12sp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/inter"
                android:textColor="@color/blue900"
                android:textAlignment="textStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                /> <!-- kasih lebar minimum -->

             <TextView
                 android:id="@+id/inputEmployment"
                tools:text="CABANG"
                android:padding="10dp"
                 android:textSize="14sp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/inter_semibold"
                android:textColor="@color/blue900"
                 android:textAlignment="textEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
        </TableRow>

        <TableRow>
            <TextView
                android:text="CABANG"
                android:padding="10dp"
                android:textSize="12sp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/inter"
                android:textColor="@color/blue900"
                android:textAlignment="textStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                /> <!-- kasih lebar minimum -->

             <TextView
                 android:id="@+id/inputBranch"
                tools:text="CABANG"
                android:padding="10dp"
                 android:textSize="14sp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/inter_semibold"
                android:textColor="@color/blue900"
                 android:textAlignment="textEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
        </TableRow>

        <TableRow>
            <TextView
                android:text="STATUS"
                android:padding="10dp"
                android:textSize="12sp"
                android:fontFamily="@font/inter"
                android:layout_marginStart="10dp"
                android:textColor="@color/blue900"
                android:textAlignment="textStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                /> <!-- kasih lebar minimum -->

            <androidx.cardview.widget.CardView
                android:id="@+id/layoutStatus"
                android:layout_width="160dp"
                android:layout_height="match_parent"
                app:cardBackgroundColor="@color/baseActive"
                android:layout_marginVertical="5dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="2dp"
                android:padding="10dp">

                <TextView
                    android:id="@+id/inputStatus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/inter_medium"
                    android:textSize="12sp"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    tools:text="DALAM PROSES"
                    />

            </androidx.cardview.widget.CardView>

        </TableRow>

        <TableRow>
             <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                 android:orientation="horizontal">
                    <TextView
                        android:text="JUMLAH ITEM"
                        android:padding="10dp"
                        android:textSize="12sp"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/inter"
                        android:textColor="@color/blue900"
                        android:textAlignment="textStart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                     <TextView
                        android:text="@string/pcs"
                        android:padding="10dp"
                        android:textSize="12sp"
                        android:fontFamily="@font/inter"
                        android:textColor="@color/primary"
                        android:textAlignment="textStart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
             </LinearLayout>
             <TextView
                 android:id="@+id/inputCountItem"
                tools:text="10"
                android:padding="10dp"
                 android:textSize="14sp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/inter_semibold"
                android:textColor="@color/blue900"
                 android:textAlignment="textEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
        </TableRow>


         <TableRow>

             <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                 android:orientation="horizontal">
                    <TextView
                        android:text="BERAT"
                        android:padding="10dp"
                        android:textSize="12sp"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/inter"
                        android:textColor="@color/blue900"
                        android:textAlignment="textStart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                     <TextView
                        android:text="@string/berat"
                        android:padding="10dp"
                        android:textSize="12sp"
                        android:fontFamily="@font/inter"
                        android:textColor="@color/primary"
                        android:textAlignment="textStart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
             </LinearLayout>

             <TextView
                android:id="@+id/inputWeight"
                tools:text="10,15"
                android:padding="10dp"
                 android:textSize="14sp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/inter_semibold"
                android:textColor="@color/blue900"
                 android:textAlignment="textEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
        </TableRow>



        <TableRow>
              <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                 android:orientation="horizontal">
                    <TextView
                        android:text="TOTAL HARGA"
                        android:padding="10dp"
                        android:textSize="12sp"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/inter"
                        android:textColor="@color/blue900"
                        android:textAlignment="textStart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                     <TextView
                        android:text="@string/rupiah"
                        android:padding="10dp"
                        android:textSize="12sp"
                        android:fontFamily="@font/inter"
                        android:textColor="@color/primary"
                        android:textAlignment="textStart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
             </LinearLayout>

            <TextView
                 android:id="@+id/inputTotalPrice"
                tools:text="10"
                android:padding="10dp"
                 android:textSize="14sp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/inter_semibold"
                android:textColor="@color/blue900"
                 android:textAlignment="textEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
        </TableRow>

    </TableLayout>

    <TextView
          android:id="@+id/titleNotes"
          android:text="CATATAN"
          android:padding="10dp"
          android:textSize="12sp"
          android:layout_marginStart="10dp"
          android:fontFamily="@font/inter"
          android:textColor="@color/blue900"
          android:textAlignment="textStart"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@id/tableLayout"
          app:layout_constraintStart_toStartOf="@id/cardForeground"
          />

    <TextView
        android:id="@+id/inputNotes"
        tools:text=" Ini catatan Ku "
        android:padding="10dp"
        android:textSize="12sp"
        android:translationZ="20dp"
        android:fontFamily="@font/inter"
        android:textColor="@color/gray900"
        android:textAlignment="textStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/cardNotes"
        app:layout_constraintEnd_toEndOf="@id/cardNotes"
        app:layout_constraintTop_toTopOf="@id/cardNotes"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardNotes"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:cardBackgroundColor="@color/blueBase"
        app:cardCornerRadius="10dp"
        android:layout_marginHorizontal="15dp"
        app:cardElevation="0dp"
        android:maxLines="3"
        app:layout_constraintTop_toBottomOf="@+id/titleNotes"
        app:layout_constraintStart_toStartOf="@id/cardForeground"
        app:layout_constraintEnd_toEndOf="@id/cardForeground"
        />

</androidx.constraintlayout.widget.ConstraintLayout>